FIX: refactoring routes names
