# app.js
@@ -4,9 +4,9 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
 const clientRouter = require('./core/clients/routes');
-const logRouter = require('./core/authentication/log/routes');
 const signRouter = require('./core/authentication/sign/routes');
 const emailRouter = require('./core/authentication/email/routes');
+const registerRouter = require('./core/authentication/register/routes');
 
 const initConfig = require('./core/init');
 
@@ -18,10 +18,10 @@ app.use(express.json());
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
+app.use('/register', registerRouter);
 app.use('/clients', clientRouter);
 app.use('/email', emailRouter);
 app.use('/sign', signRouter);
-app.use('/log', logRouter);
 
 app.get('/', (req, res) => {
   res.send(`✨ Well Done your app is up!`)
